--- a/app/src/main/res/layout/activity_statiestieken_keuze.xml
+++ b/app/src/main/res/layout/activity_statiestieken_keuze.xml
@@ -14,7 +14,7 @@
         android:layout_marginEnd="67dp"
         android:layout_marginBottom="50dp"
         android:onClick="startLeukeStatistieken"
-        android:text="Leuke Statistieken"
+        android:text="Gooi Statistieken"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.231"
