Design verbeterd, meer iconen en kleurtjes enzo

--- a/app/src/main/res/layout/activity_bierpopup.xml
+++ b/app/src/main/res/layout/activity_bierpopup.xml
@@ -14,6 +14,7 @@
         android:layout_marginTop="40dp"
         android:onClick="hit"
         android:text="Raak!"
+        android:textColor="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.2"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,6 +27,7 @@
         android:layout_marginTop="16dp"
         android:text="Tik hier hoe vaak je raak hebt gegooid. Na 2 minuten worden de niet gegooide dopjes als gemist beschouwd. "
         android:textAlignment="center"
+        android:textColor="#000000"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -38,6 +40,7 @@
         android:layout_height="170dp"
         android:onClick="mis"
         android:text="Mis!"
+        android:textColor="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.4"
         app:layout_constraintStart_toStartOf="parent"
@@ -49,6 +52,7 @@
         android:layout_height="170dp"
         android:onClick="uithetRaam"
         android:text="Uit het raam!"
+        android:textColor="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.6"
         app:layout_constraintStart_toStartOf="parent"
@@ -60,6 +64,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
         android:text="TextView"
+        android:textColor="#000000"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -71,6 +76,7 @@
         android:layout_height="170dp"
         android:onClick="allesMis"
         android:text="De rest mis"
+        android:textColor="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.8"
         app:layout_constraintStart_toStartOf="parent"
@@ -82,6 +88,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="TextView"
+        android:textColor="#000000"
         app:layout_constraintEnd_toEndOf="@+id/bierTeGooienText"
         app:layout_constraintHorizontal_bias="0.475"
         app:layout_constraintStart_toStartOf="@+id/bierTeGooienText"
