--- a/app/src/main/res/layout/activity_add_and_edit_bewoners.xml
+++ b/app/src/main/res/layout/activity_add_and_edit_bewoners.xml
@@ -11,6 +11,7 @@
         android:id="@+id/fotoAanpassen"
         android:layout_width="wrap_content"
         android:layout_height="44dp"
+        app:layout_constraintBottom_toBottomOf="@+id/IB_vG"
         app:layout_constraintStart_toStartOf="@+id/textView8"
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
