--- a/app/src/main/res/layout/activity_bierlijst.xml
+++ b/app/src/main/res/layout/activity_bierlijst.xml
@@ -13,6 +13,7 @@
         android:layout_marginTop="16dp"
         android:text="Bier!"
         android:textAlignment="center"
+        android:textColor="#000000"
         android:textSize="36sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
@@ -44,18 +45,18 @@
         android:onClick="substractsteven"
         app:layout_constraintStart_toStartOf="@+id/IG_B5"
         app:layout_constraintTop_toBottomOf="@+id/IG_B5"
-        app:srcCompat="@android:drawable/button_onoff_indicator_on" />
+        app:srcCompat="@android:drawable/button_onoff_indicator_on"
+        app:tint="#000000" />
 
     <ImageButton
         android:id="@+id/substractB2"
         android:layout_width="50dp"
         android:layout_height="40dp"
         android:onClick="substractSven"
-        app:layout_constraintEnd_toStartOf="@+id/editTextB2"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/IG_B2"
-        app:layout_constraintTop_toTopOf="@+id/editTextB2"
-        app:srcCompat="@android:drawable/button_onoff_indicator_on" />
+        app:layout_constraintTop_toBottomOf="@+id/IG_B2"
+        app:srcCompat="@android:drawable/button_onoff_indicator_on"
+        app:tint="#000000" />
 
     <ImageButton
         android:id="@+id/IG_B5"
@@ -107,7 +108,8 @@
         android:onClick="addThijs"
         app:layout_constraintEnd_toEndOf="@+id/IG_B1"
         app:layout_constraintTop_toTopOf="@+id/substractB1"
-        app:srcCompat="@android:drawable/ic_input_add" />
+        app:srcCompat="@android:drawable/ic_input_add"
+        app:tint="#000000" />
 
     <ImageButton
         android:id="@+id/addB2"
@@ -115,9 +117,9 @@
         android:layout_height="40dp"
         android:onClick="addSven"
         app:layout_constraintEnd_toEndOf="@+id/IG_B2"
-        app:layout_constraintStart_toEndOf="@+id/editTextB2"
-        app:layout_constraintTop_toTopOf="@+id/editTextB2"
-        app:srcCompat="@android:drawable/ic_input_add" />
+        app:layout_constraintTop_toBottomOf="@+id/IG_B2"
+        app:srcCompat="@android:drawable/ic_input_add"
+        app:tint="#000000" />
 
     <ImageButton
         android:id="@+id/IG_B1"
@@ -148,14 +150,16 @@
         android:onClick="addRowin"
         app:layout_constraintEnd_toEndOf="@+id/IG_B4"
         app:layout_constraintTop_toTopOf="@+id/editTextB4"
-        app:srcCompat="@android:drawable/ic_input_add" />
+        app:srcCompat="@android:drawable/ic_input_add"
+        app:tint="#000000" />
 
     <EditText
         android:id="@+id/editTextB3"
-        android:layout_width="50dp"
+        android:layout_width="0dp"
         android:layout_height="40dp"
         android:ems="10"
         android:inputType="numberSigned"
+        app:layout_constraintEnd_toStartOf="@+id/addB3"
         app:layout_constraintStart_toEndOf="@+id/substractB3"
         app:layout_constraintTop_toTopOf="@+id/substractB3" />
 
@@ -166,7 +170,8 @@
         android:onClick="substractEtienne"
         app:layout_constraintStart_toStartOf="@+id/IG_B3"
         app:layout_constraintTop_toBottomOf="@+id/IG_B3"
-        app:srcCompat="@android:drawable/button_onoff_indicator_on" />
+        app:srcCompat="@android:drawable/button_onoff_indicator_on"
+        app:tint="#000000" />
 
     <TextView
         android:id="@+id/B3sbgeven"
@@ -183,9 +188,9 @@
         android:layout_height="40dp"
         android:onClick="addEtienne"
         app:layout_constraintEnd_toEndOf="@+id/IG_B3"
-        app:layout_constraintStart_toEndOf="@+id/editTextB3"
-        app:layout_constraintTop_toTopOf="@+id/substractB3"
-        app:srcCompat="@android:drawable/ic_input_add" />
+        app:layout_constraintTop_toBottomOf="@+id/IG_B3"
+        app:srcCompat="@android:drawable/ic_input_add"
+        app:tint="#000000" />
 
     <ImageButton
         android:id="@+id/IG_B2"
@@ -202,7 +207,7 @@
 
     <EditText
         android:id="@+id/editTextB5"
-        android:layout_width="50dp"
+        android:layout_width="0dp"
         android:layout_height="40dp"
         android:ems="10"
         android:inputType="numberSigned"
@@ -230,17 +235,17 @@
 
     <EditText
         android:id="@+id/editTextB2"
-        android:layout_width="50dp"
+        android:layout_width="0dp"
         android:layout_height="40dp"
         android:ems="10"
         android:inputType="numberSigned"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/addB2"
+        app:layout_constraintStart_toEndOf="@+id/substractB2"
         app:layout_constraintTop_toBottomOf="@+id/IG_B2" />
 
     <EditText
         android:id="@+id/editTextB1"
-        android:layout_width="50dp"
+        android:layout_width="0dp"
         android:layout_height="40dp"
         android:ems="10"
         android:inputType="numberSigned"
@@ -256,11 +261,12 @@
         android:onClick="addsteven"
         app:layout_constraintEnd_toEndOf="@+id/IG_B5"
         app:layout_constraintTop_toBottomOf="@+id/IG_B5"
-        app:srcCompat="@android:drawable/ic_input_add" />
+        app:srcCompat="@android:drawable/ic_input_add"
+        app:tint="#000000" />
 
     <EditText
         android:id="@+id/editTextB4"
-        android:layout_width="50dp"
+        android:layout_width="0dp"
         android:layout_height="40dp"
         android:ems="10"
         android:inputType="numberSigned"
@@ -297,7 +303,8 @@
         android:onClick="substractRowin"
         app:layout_constraintStart_toStartOf="@+id/IG_B4"
         app:layout_constraintTop_toTopOf="@+id/editTextB4"
-        app:srcCompat="@android:drawable/button_onoff_indicator_on" />
+        app:srcCompat="@android:drawable/button_onoff_indicator_on"
+        app:tint="#000000" />
 
     <ImageButton
         android:id="@+id/substractB1"
@@ -306,17 +313,20 @@
         android:onClick="substractThijs"
         app:layout_constraintStart_toStartOf="@+id/IG_B1"
         app:layout_constraintTop_toBottomOf="@+id/IG_B1"
-        app:srcCompat="@android:drawable/button_onoff_indicator_on" />
+        app:srcCompat="@android:drawable/button_onoff_indicator_on"
+        app:tint="#000000" />
 
     <ImageButton
         android:id="@+id/IG_nonMM"
         android:layout_width="200dp"
         android:layout_height="200dp"
+        android:backgroundTint="#00FFFFFF"
         android:scaleType="centerCrop"
         app:layout_constraintEnd_toEndOf="@+id/IG_B3"
         app:layout_constraintStart_toStartOf="@+id/IG_B3"
         app:layout_constraintTop_toTopOf="@+id/IG_B5"
-        app:srcCompat="@drawable/beer512" />
+        app:srcCompat="@drawable/beer512"
+        app:tint="#000000" />
 
     <TextView
         android:id="@+id/NietMMers"
