--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
         android:layout_marginTop="50dp"
         android:layout_marginEnd="50dp"
         android:text="Welkom op Huize Morgen Misschien"
+        android:textColor="#000000"
         android:textSize="36sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,15 +24,12 @@
         android:id="@+id/bierlijstBtn"
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:layout_marginStart="33dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="77dp"
+        android:layout_marginEnd="250dp"
         android:backgroundTint="#00FFFFFF"
         android:onClick="startBierlijst"
         android:scaleType="fitCenter"
         android:src="@drawable/beer512"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.237"
+        app:layout_constraintEnd_toEndOf="@+id/titleBierlijst"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/titleBierlijst"
         app:tint="#000000"
@@ -51,16 +49,16 @@
         android:id="@+id/statistiekenBtn"
         android:layout_width="200dp"
         android:layout_height="200dp"
+        android:layout_marginStart="250dp"
         android:backgroundTint="#00FFFFFF"
         android:contentDescription="TODO"
         android:onClick="startStatistieken"
         android:scaleType="center"
-        app:tint="#000000"
-        app:layout_constraintBottom_toBottomOf="@+id/bierlijstBtn"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/bierlijstBtn"
-        app:layout_constraintTop_toTopOf="@+id/bierlijstBtn"
+        app:layout_constraintStart_toStartOf="@+id/titleBierlijst"
+        app:layout_constraintTop_toBottomOf="@+id/titleBierlijst"
         app:srcCompat="@drawable/ic_graph"
+        app:tint="#000000"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <ImageButton
@@ -99,12 +97,12 @@
         android:longClickable="true"
         android:onClick="startSchoonmaakbier"
         android:scaleType="fitStart"
-        app:tint="#8F8F8F"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.868"
         app:layout_constraintStart_toEndOf="@+id/titleBierlijst"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/nicepng_cleaning_icon_png_8333695"
+        app:tint="#8F8F8F"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <TextView
@@ -127,12 +125,13 @@
         app:layout_constraintTop_toBottomOf="@+id/editBewoners" />
 
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="452dp"
-        android:layout_height="396dp"
-        android:layout_marginTop="20dp"
+        android:id="@+id/imageView2"
+        android:layout_width="353dp"
+        android:layout_height="564dp"
+        android:layout_marginTop="120dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bierText"
-        app:srcCompat="@drawable/logomm_org" />
+        app:layout_constraintTop_toTopOf="@+id/bierlijstBtn"
+        app:srcCompat="@drawable/logomm_org_transparent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
